Fixed nowrap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -342,6 +342,10 @@ figure {
 	font-weight: 750;
 }
 
+.ds-skills-list li.no-wrap {
+	white-space: nowrap;
+}
+
 
 /*-----------------------------------------------------------------
   5. >>> Certifications Style
